# WorkStealingThreadPool

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
cmake/: WorkStealingThreadPoolConfig.cmake.in  add_unit_test_module.cmake  gtest.cmake  install.cmake  version.in
include/: function_wrapper.hpp  thread_safe_queue.hpp  threadsafe_queue.hpp  work_stealing_thread_pool.hpp
test/: CMakeLists.txt  thread_safe_queue.cpp  threadsafe_queue.cpp  work_stealing_thread_pool.cpp
